--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
   web:
     build: .
     ports:
-     - "5000:5000"
+     - "4000:80"
     volumes:
      - .:/code
   redis:
-    image: "redis:alpine"
+    image: "kozanchyn/lab7_1"
   web:
     image: "webapp:${TAG}"
 
